Replace xls file to csv - backup database

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -7,7 +7,7 @@
     <title>Refresh database</title>
 </head>
 <body class="bg">
-<form class="center-element" action="/admin/update/from/excel" method="post">
+<form class="center-element" action="/admin/update/from/csv" method="post">
     <input type="submit" id="submitButton" th:value="Refresh">
 </form>
 </body>
